# auto_pipetty

./: CMakeLists.txt  README.md  motor_connector_5.SLDPRT  package.xml  pipette_stand_1.SLDPRT  pipetty_USB_withoutcover.SLDASM  pipetty_gripper_interface_2.SLDPRT  pipetty_motor_connector_assembly_1.SLDASM
config/: 81-pipetty.rules
launch/: auto_pipetty.launch
scripts/: pipette_motor_serial.py  pipetty_motor_serial.py
sketchbook/: servo_driver.ino
